--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -150,7 +150,7 @@
 	      \end{enumerate}
 \end{itemize}
 
-\subsubsection{UC12.2.1- Errore: inserimento di un codice tag RFID di una stanza non validoi}
+\subsubsection{UC-12.2.1 Errore: inserimento di un codice tag RFID di una stanza non valido}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore ha provato ad inserire il codice tag RFID di nuova stanza ma l'assegnazione non è andata a buon fine poiché il codice inserito è già censito nel sistema, quindi già associato ad una stanza esistente;
@@ -190,7 +190,7 @@
     \end{itemize}
 \end{itemize}
 
-%TODO check
+
 \paragraph{UC-13.2 Visualizzazione panoramica postazioni interne ad una stanza}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
@@ -203,7 +203,7 @@
     \end{itemize}
 \end{itemize}
 
-%TODO relativo UC mostra nome/cognome utenti stanza selezionata???
+
 \paragraph{UC-13.3 Visualizzazione numero utenti presenti nella singola stanza}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
