will be updated soon
Never say never

--- a/DocumentiEsterni/Glossario/main.tex
+++ b/DocumentiEsterni/Glossario/main.tex
@@ -13,7 +13,7 @@
 
 \section*{Registro delle modifiche}\label{sec:Registro-modifiche}
 \input{./src/RegistroModifiche.tex}
-\setcounter{secnumdepth}{0}
+\setcounter{secnumdepth}{0}%ignora i numeri prima delle subsections section...
 \newpage
 \tableofcontents
 
