--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -14,6 +14,7 @@
 \usepackage{blindtext}
 \usepackage{pgf-pie}
 \usepackage{pgfplots}
+\usepackage{lmodern}
 \input{./src/Comandi.tex}
 
 \begin{document}
@@ -53,4 +54,7 @@
 
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
+    \section{Appendice}\label{sec:Appendice}
+    \appendix
+    \input{src/Appendice/main.tex}
 \end{document}
