--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -1,3 +1,4 @@
+\hypertarget{Tabellaoccorrenzarischi}{}
 Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progressivi, in cui si elencano le occorrenze dei rischi effettivamente verificatisi finora. Vengono riportati:
 \begin{itemize}
     \item il codice identificativo del rischio;
