--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Incrementi.tex
@@ -1,1 +1,8 @@
-Lo \glo{stadio} attuale del progetto non prevede ancora la pianificazione dettagliata degli incrementi, la quale sarà possibile solo dopo un'accurata progettazione. Pertanto questo paragrafo verrà conseguentemente aggiornato una volta raggiunta la relativa \glo{fase}.
+\hypersetup{
+    linkcolor=blue
+}
+La \hyperlink{TabellaIncrementi}{tabella degli incrementi} si trova in appendice. 
+\hypersetup{
+    linkcolor=black
+}
+         
