--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
@@ -69,19 +69,20 @@ Verificatore   &  218 & 3270 \\
 % 	\end{tikzpicture}
 % \end{center}
 
-Nel seguente areogramma viene rappresentata la distribuzione dei costi in percentuale sulla spesa totale da affrontare:
-\begin{center}
-	\begin{tikzpicture}
-		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
-			7/Responsabile, % 52/723 %
-			8/Amministratore, % 59/723 %
-			4/Analista, % 29/723 %
-			20/Progettista, % 142/723 %
-			31/Programmatore, % 227/723 %
-			30/Verificatore % 218/723 %
-		}
-	\end{tikzpicture}
-\end{center}
+Nel seguente areogramma viene rappresentata la distribuzione dei costi in percentuale sulla spesa totale da affrontare:\\
+\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaPrevCompleto.png}
+%\begin{center}
+%	\begin{tikzpicture}
+%		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
+%			7/Responsabile, % 52/723 %
+%			8/Amministratore, % 59/723 %
+%			4/Analista, % 29/723 %
+%			20/Progettista, % 142/723 %
+%			31/Programmatore, % 227/723 %
+%			30/Verificatore % 218/723 %
+%		}
+%	\end{tikzpicture}
+%\end{center}
 
 \subsubsection{Costo complessivo}
 Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e infine l'importo proposto da \Gruppo{} per la realizzazione del progetto \NomeProgetto{}:\\
