--- a/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
@@ -19,13 +19,14 @@ Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato co
 \subsubsection{Normativi}
 \begin{itemize}
 	\item \textbf{Capitolato d'appalto C1:} \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
-	\item \textbf{ISO\_1227--1995:} \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
+	\item \NdPv{};
 \end{itemize}
 
 \subsubsection{Informativi}
 \begin{itemize}
 	\item \PdPv{}
 	\item \PdQv{}
+	\item \textbf{ISO\_1227--1995:} \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
 	\item \href{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L05.pdf}{Slide L05 del corso Ingegneria del Software - Ciclo di vita del software}
 	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20Use%20Case_4x4.pdf}{Slide dei casi d'uso}
 	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20delle%20Classi_4x4.pdf}{Slide dei diagrammi delle classi}
