--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex
@@ -7,16 +7,4 @@ La technology baseline descrive ed eventualmente motiva le decisioni prese dal g
     \item \textbf{Test di integrazione}: descrizione dei test eseguiti per verificare che i componenti interagiscano in maniera corretta tra di loro per soddisfare i requisiti.
 \end{itemize}
 
-La technology baseline deve concretizzarsi nella realizzazione di un \emph{\glo{PoC}} che ha la funzione di mostrare l'integrazione delle tecnologie scelte:
-
-\rowcolors{2}{\evenRowColor}{\oddRowColor}
-\begin{longtable}{ C{2.5cm} C{3cm} C{7cm} C{3.5cm} }
-    \caption{Tabella riassuntiva integrazione PoC}                                                                                 \\
-    \rowcolor{\primaryColor}
-    \textcolor{\secondaryColor}{\textbf{Nome tecnologia}} & \textcolor{\secondaryColor}{\textbf{Contesto di Utilizzo}} & \textcolor{\secondaryColor}{\textbf{Requisito soddisfatto}}\\ \endhead
-    {Flatter} & {Per lo sviluppo delle app mobile(login e lettura tag)} & { R-numero-D-I } \\
-    {MongoDB} & {Per il database ai fini del login} & { R-numero-P-O} \\
-    {Docker} & {} & {}\\
-    {Kubernets} & {} & {}\\
-    {Solidity} & {} & {} \\
-\end{longtable}
+La technology baseline deve concretizzarsi nella realizzazione di un \emph{\glo{PoC}} che ha la funzione di mostrare l'integrazione dei requisiti principali integrati tramite le tecnologie riportate nella tabella dello stack tecnologico, per i requisiti relativi si rimanda al PdP.
