--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
@@ -1,11 +1,12 @@
 \subsubsection{Normativi}
 \begin{itemize}
     \item \NdPv{};
-    \item \textbf{Organigrama}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/RO.html}.
+    \item \textbf{Organigramma}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/RO.html}.
 \end{itemize}
 
 \subsubsection{Informativi}
 \begin{itemize}
     \item \textbf{Capitolato d'appalto C1}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
     \item \textbf{Docker Ecosystem and Tools}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/ST3.pdf};
+    \item \textbf{Gestione di progetto}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L06.pdf};
 \end{itemize}
