--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
@@ -32,37 +32,38 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 }
 
 % Responsabile color=blue, Amministratore color=yellow, Analista color=red, Progettista color=green, Programmatore color=grigetto, Verificatore color=orange  [ybar, fill=] blue, yellow, red, green, grigetto, orange
-La suddivisione delle ore preventivate per ciascun componente del gruppo e per ogni ruolo viene rappresentata nel seguente istogramma:
-\begin{center}
-	\pgfplotsset{width=15.4cm, height=8.5cm}
-	\begin{tikzpicture}
-		\begin{axis}[
-			ybar stacked,
-			bar width=20pt,
-			legend style={
-				at={(0.5,-0.15)},
-				anchor=north,
-				legend columns=-1
-			},
-			symbolic x coords={Abdelwahad, Alessio, Andrea, Edoardo, Elvis, Filippo, Giovanni},
-			xtick=data
-		]
-			\legend{Responsabile, Amministratore, Analista, Progettista, Programmatore, Verificatore}
+La suddivisione delle ore preventivate per ciascun componente del gruppo e per ogni ruolo viene rappresentata nel seguente istogramma:\\
+\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoSviluppo.png}
+%\begin{center}
+%	\pgfplotsset{width=15.4cm, height=8.5cm}
+%	\begin{tikzpicture}
+%		\begin{axis}[
+%			ybar stacked,
+%			bar width=20pt,
+%			legend style={
+%				at={(0.5,-0.15)},
+%				anchor=north,
+%				legend columns=-1
+%			},
+%			symbolic x coords={Abdelwahad, Alessio, Andrea, Edoardo, Elvis, Filippo, Giovanni},
+%			xtick=data
+%		]
+%			\legend{Responsabile, Amministratore, Analista, Progettista, Programmatore, Verificatore}
 			% Responsabile
-			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{0}{11}{10}{0}{0}{0}{0}};
+%			\addplot [ybar, fill=blue] coordinates {\ColonnaIstogramma{0}{11}{10}{0}{0}{0}{0}};
 			% Amministratore
-			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{8}{8}{8}};
+%			\addplot [ybar, fill=yellow] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{8}{8}{8}};
 			% Analista
-			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{0}{0}{0}};
+%			\addplot [ybar, fill=red] coordinates {\ColonnaIstogramma{0}{0}{0}{0}{0}{0}{0}};
 			% Progettista
-			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{12}{10}{7}{13}{10}{11}{10}};
+%			\addplot [ybar, fill=green] coordinates {\ColonnaIstogramma{12}{10}{7}{13}{10}{11}{10}};
 			% Programmatore
-			\addplot [ybar, fill=pink] coordinates {\ColonnaIstogramma{19}{15}{18}{18}{19}{18}{19}};
+%			\addplot [ybar, fill=pink] coordinates {\ColonnaIstogramma{19}{15}{18}{18}{19}{18}{19}};
 			% Verificatore
-			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{17}{13}{14}{17}{11}{12}{12}};
-		\end{axis}
-	\end{tikzpicture}
-\end{center}
+%			\addplot [ybar, fill=orange] coordinates {\ColonnaIstogramma{17}{13}{14}{17}{11}{12}{12}};
+%		\end{axis}
+%	\end{tikzpicture}
+%\end{center}
 \clearpage
 % \subsubsection{Ore e costi degli incrementi}
 % La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
@@ -122,15 +123,16 @@ Verificatore    & 96 & 1440 \\
 
 
 \vskip 30pt %spazio verticale
-La quantità di ore totali preventivate per ciascun ruolo viene rappresentata nel seguente areogramma:
-\begin{center}
-	\begin{tikzpicture}
-		\pie[rotate = 180, color={blue, yellow, green, pink, orange}] {
-			6/Responsabile,
-			7/Amministratore,
-			22/Progettista,
-			37/Programmatore,
-			28/Verificatore
-		}
-	\end{tikzpicture}
-\end{center}
+La quantità di ore totali preventivate per ciascun ruolo viene rappresentata nel seguente areogramma:\\
+\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaSviluppo.png}
+%\begin{center}
+%	\begin{tikzpicture}
+%		\pie[rotate = 180, color={blue, yellow, green, pink, orange}] {
+%			6/Responsabile,
+%			7/Amministratore,
+%			22/Progettista,
+%			37/Programmatore,
+%			28/Verificatore
+%		}
+%	\end{tikzpicture}
+%\end{center}
