--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
@@ -1,6 +1,6 @@
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
-\begin{longtable}{ c C{9cm} c }
+\begin{longtable}{ c C{7.5cm} C{3cm} }
     \caption{Tabella classificazione requisiti di vincolo}\\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
@@ -17,7 +17,7 @@
     R-2.2-V-O   & L'applicazione web deve essere sviluppata con il framework di front-end \glo{Angular} & VERBALE INTERNO 2021-01-29 \\
     R-2.3-V-D   & E' desiderabile l'utilizzo di \glo{NodeJS} per la parte beck-end e front-end &  VERBALE INTERNO 2021-01-29 \\
     R-3-V-F     & Il sistema è composto da microservizi & Capitolato\\
-    R-4-V-F     & Il sistema utilizza TODO NOME per connettersi alla rete Ethereum & Capitolato\\
+    R-4-V-O     & Il sistema utilizza \glo{Infura} per connettersi alla rete Ethereum & Capitolato\\
     R-5-V-O     & Devono essere previsti testi di unità e di integrazione & Capitolato\\
     R-6-V-O     & L'applicazione mobile deve essere sviluppata tramite framework \glo{Flutter} e linguaggio di programmazione \glo{Dart} & VERBALE INTERNO 2021-02-10 \\
     R-7-V-O     & L'applicazione mobile deve utilizzare la tecnologia NFC & Capitolato \\
